mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-mysql
  labels:
    app: jira
spec:
  ports:
    - port: 3306
  selector:
    app: jira
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-mysql
  labels:
    app: jira
spec:
  selector:
    matchLabels:
      app: jira
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jira
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
